--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
 <meta name="keywords" content="HTML, exercises, secondary school, Eric, eric15342335, Cheng Ho Ming, HKU, BASc(AppliedAI)">
 <meta name="author" content="eric15342335">
 <link rel="canonical" href="https://eric15342335.github.io/ch19_html/">
+<!-- Google Tag Manager -->
 <script>
-// To prevent Firefox FOUC, this must be here
-let FF_FOUC_FIX;
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TSN8XT5T');
 </script>
+<!-- End Google Tag Manager -->
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TSN8XT5T"
+height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
 <!-- Open Graph Meta Tags -->
 <meta property="og:title" content="Index Page - Introductory HTML Exercises">
 <meta property="og:description" content="Explore a collection of introductory HTML exercises learnt in secondary school.">
