--- a/404.html
+++ b/404.html
@@ -1,57 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="description" content="404 Not Found - Page not available">
-<meta name="robots" content="noindex, nofollow">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>404 Not Found - Page not available</title>
-<link rel="prefetch" href="/index.html">
-<noscript>
+  <meta charset="UTF-8">
+  <meta name="description" content="404 Not Found - Page not available">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>404 Not Found - Page not available</title>
+  
   <meta http-equiv="refresh" content="10; url=/index.html">
-</noscript>
+  <link rel="prefetch" href="/index.html">
 
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #111;
-  }
-  .message {
-    text-align: center;
-    color: #eee;
-    max-width: 600px;
-    padding: 20px;
-  }
-  .message p {
-    margin: 0.5em 0;
-  }
-  a {
-    color: #aaf;
-    text-decoration: underline;
-  }
-  a:hover, a:focus {
-    text-decoration: none;
-  }
-  #countdown {
-    font-size: 1.2em;
-    font-weight: bold;
-  }
-  @keyframes fadeInOut {
-    0%, 100% { opacity: 0; }
-    50% { opacity: 1; }
-  }
-  .animate {
-    animation: fadeInOut 1s infinite;
-  }
-</style>
+  <!-- Google Analytics -->
+  <!-- Google tag (gtag.js) -->
+  <script async fetchpriority="low"
+    src="https://www.googletagmanager.com/gtag/js?id=G-V187TY0SPN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-V187TY0SPN');
+  </script>
+  <!-- End Google Analytics -->
+
+  <!-- Microsoft Clarity -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+      t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+      t.setAttribute('fetchpriority', 'low');
+      y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "o9poktpwjv");
+  </script>
+  <!-- End Microsoft Clarity -->
+
+  <!-- GoatCounter -->
+  <script async fetchpriority="low"
+    data-goatcounter="https://eric310.goatcounter.com/count"
+    src="https://gc.zgo.at/count.js"></script>
+  <!-- End GoatCounter -->
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #111;
+    }
+    .message {
+      text-align: center;
+      color: #eee;
+      max-width: 600px;
+      padding: 20px;
+    }
+    .message p {
+      margin: 0.5em 0;
+    }
+    a {
+      color: #aaf;
+      text-decoration: underline;
+    }
+    a:hover, a:focus {
+      text-decoration: none;
+    }
+    #countdown {
+      font-size: 1.2em;
+      font-weight: bold;
+    }
+    @keyframes fadeInOut {
+      0%, 100% { opacity: 0; }
+      50% { opacity: 1; }
+    }
+    .animate {
+      animation: fadeInOut 1s infinite;
+    }
+  </style>
 </head>
 <body>
 <main>
+
+
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TSN8XT5T"
+height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+
   <div class="message" role="alert">
     <h1>404 Not Found</h1>
     <p>We're sorry, but the page you're looking for cannot be found.</p>
